# aoc21

./: README.md
day02/cpp/src/: two_a.cpp  two_b.cpp
day02/py/: two_a.py  two_b.py
day03/py/: three_a.py  three_b.py
day04/input/: input.txt
day04/py/: day04_a.py  day04_b.py
one/: one_a.py  one_b.py
two/cpp/: CMakeLists.txt  build.sh
